--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
     <h1>Hola mundo Git</h1>
+
+    <section class="layout">
+        <div class="sidebar">1</div>
+        <div class="body">2</div>
+    </section>
+
 </body>
+
 </html>
