--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
 </head>
 
 <body>
-    <h1>Hola mundo Git</h1>
-
-    <section class="layout">
-        <div class="sidebar">1</div>
-        <div class="body">2</div>
-    </section>
+   <div class="caja"></div>
 
 </body>
 
